# korppi

./: .envrc  .gitignore  CNAME  CONFLICT_DETECTION.md  DAY3_RESULTS.md  DRAFTS_FEATURE_SPECIFICATION.md  FEATURE_DEMO.md  KMD_SPECIFICATION.md  NEXT_STEPS.md  README.md  comments.html  configuration.html  contributing.html  day1_complete.md  day1_testing.md  development.md  export.html  faq.html  file-format.html  first-document.html  flake.nix  formatting.html  implementation.md  index.html  installation.html  keyboard-shortcuts.html  package-lock.json  package.json  profile.html  quick-start.html  quickstart.sh  rationale.html  reconcile.html  reconciliation.html  style.css  test-conflict-detection.html  timeline.html  troubleshooting.html  vite.config.js
docs/: _nav.txt  _template.html  build.sh  comments.md  configuration.md  contributing.md  export.md  faq.md  file-format.md  first-document.md  formatting.md  index.md  installation.md  keyboard-shortcuts.md  profile.md  quick-start.md  rationale.md  reconcile.md  reconciliation.md  timeline.md  troubleshooting.md
example/: README-alice.kmd  README-antonio.kmd  README-bruno.kmd  README-gunther.kmd  quarterly_report-alice.kmd  quarterly_report-gunther.kmd  quarterly_report.kmd  readme.kmd  readme_alice.kmd  reference_doc.md
src/: autosave.js  collaboration-service.js  collaboration-ui.js  comments-service.js  comments-ui.js  conflict-detection-worker.js  conflict-detection.js  conflict-detection.test.js  conflict-service.js  conflict-ui.js  conflict-zones.js  diff-highlighter.js  diff-highlighter.test.js  diff-preview.js  document-log.js  document-manager.js  document-tabs.js  editor-mapping.test.js  editor.js  history.js  hunk-calculator.js  hunk-calculator.test.js  hunk-review-panel.js  index.html  keyboard-shortcuts.js  kmd-service.js  line-range-detector.js  main.js  mapping-logic.js  milkdown-figure.js  milkdown-underline.js  patch-extractor.js  patch-grouper.js  patch-merge-wizard.js  patch-merge.js  profile-service.js  reconcile.js  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.toml
src-tauri/src/: commands.rs  comments.rs  conflict_commands.rs  conflict_detector.rs  conflict_store.rs  db_utils.rs  document_manager.rs  hunk_calculator.rs  kmd.rs  lib.rs  main.rs  models.rs  patch_bundle.rs  patch_log.rs  pijul_ops.rs  profile.rs  yjs_store.rs
src-tauri/tests/: conflict_test.rs  integration_test.rs  patch_review_test.rs  yjs_store_test.rs
(+21 files in other folders)
