[package]
name = "korppi-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "dialog-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Pijul - use exact version to avoid API changes
canonical-path = "2.0"
ignore = "0.4"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dev-dependencies]
tempfile = "3.8"
