[package]
name = "korppi-prototype"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Pijul - use exact version to avoid API changes
canonical-path = "2.0"
ignore = "0.4"
log = "0.4"
env_logger = "0.10"

# User profile
dirs = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

# KMD file format
zip = "0.6"
tempfile = "3"

# DOCX export
docx-rs = "0.4.18"
pulldown-cmark = "0.13.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
