[package]
name = "korppi"
version = "0.2.0-rc"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled"] }

# Pijul - use exact version to avoid API changes
canonical-path = "2.0"
ignore = "0.4"
log = "0.4"
env_logger = "0.10"

# User profile
dirs = "6"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

# KMD file format
zip = "0.6"
tempfile = "3"

# Content hashing
sha2 = "0.10"

# Text diffing for hunks
similar = { version = "2.7", features = ["text"] }

# DOCX export
docx-rs = "0.4.18"
pulldown-cmark = "0.13.0"
regex = "1"

# XML parsing for DOCX/ODT import
quick-xml = "0.31"

# Opening URLs in system browser
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
